<resources>
    <string name="app_name">TwitterApp</string>
    <string name="not_registered">not register</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="already_registered">already register</string>
    <string name="confirm_password">confirm password</string>
</resources>
