<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#00A2ED">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="127dp"
        app:srcCompat="@drawable/twitter"
        />
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/username"
        android:drawableRight="@drawable/username"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:drawableRight="@drawable/password"/>
    <EditText
        android:id="@+id/edit_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffffff"
        android:hint="@string/confirm_password"
        android:drawableRight="@drawable/password"/>


    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:text="@string/register" />
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="already_registered ?"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>